--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -1,18 +1,18 @@
 # Change baseurl before deploy
 baseurl = "https://ztnote.github.io"
-languageCode = "en-us"
-title = "Hugo Theme Stack Starter"
+languageCode = "zh-cn"
+title = "ZTNote"
 
 # Theme i18n support
 # Available values: en, fr, id, ja, ko, pt-br, zh-cn, zh-tw, es, de, nl, it, th, el, uk, ar
-defaultContentLanguage = "en"
+defaultContentLanguage = "zh-cn"
 
 # Set hasCJKLanguage to true if DefaultContentLanguage is in [zh-cn ja ko]
 # This will make .Summary and .WordCount behave correctly for CJK languages.
-hasCJKLanguage = false
+hasCJKLanguage = true
 
 # Change it to your Disqus shortname before using
 disqusShortname = "hugo-theme-stack"
 
 [pagination]
-pagerSize = 5
+pagerSize = 10
